--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="score"></div>
         <div class="game">
-            <div class="start">Чтобы начать игру нажмите сюда</div>
+            <div class="start">Старт</div>
             <div class="gameArea"></div>
         </div>
 
